--- a/InterEcoStructure.qmd
+++ b/InterEcoStructure.qmd
@@ -5,19 +5,23 @@ editor: visual
 
 InterEco webpages consist of five tabs, as follows:
 
-1.   study summary
+Study details
 
--   may want to standalone from paper, may not
+Here,
 
--   study details - authors, link to paper/organisation, funding...
+The amount of detail you provide may vary depending on whether you would like the website to standalone from your research article, or not.
 
--   aim, objectives
+If your paper is behind a paywall,
 
--   taxa, location,
+If alongside a published article, cite this here to emphasise peer-reviewed.
 
--   locations, spatial layers - option to choose which to plot
-
--   main findings and conclusions
+1.  
+2.  may want to standalone from paper, may not
+3.  study details - authors, link to paper/organisation, funding...
+4.  aim, objectives
+5.  taxa, location,
+6.  locations, spatial layers - option to choose which to plot
+7.  main findings and conclusions
 
 3\) Interpretation
 
