Added text to the homepage - now we have a first draft.

--- a/index.qmd
+++ b/index.qmd
@@ -6,37 +6,37 @@ Hello and welcome to InterEco! Here you can learn how to build a free, interacti
 
 **What is InterEco?**
 
-'InterEco' is short for '***inter***active ***eco***logy'. It is a tool that helps you build an interactive website that can be published for free alongside your ecological research article. It uses [Shiny](https://shiny.rstudio.com/#:~:text=Shiny%20is%20an%20R%20package,%2C%20htmlwidgets%2C%20and%20JavaScript%20actions.), an R package that makes it easy to build interactive webpages straight from R. With Shiny, you can make a slick website without having any experience in web development (e.g. html, Java). InterEco websites produced via InterEco can be published alongside academic publications, project reports, or standalone.
+'InterEco' is short for '***inter***active ***eco***logy'. It is a tool that helps you build an interactive website that can be published for free alongside your ecological research article. It uses [Shiny](https://shiny.rstudio.com/#:~:text=Shiny%20is%20an%20R%20package,%2C%20htmlwidgets%2C%20and%20JavaScript%20actions.), an R package that makes it easy to build interactive webpages straight from R. With Shiny, you can make a slick website without having any experience in web development (e.g. html, Java). InterEco websites can be published alongside academic publications, project reports, or standalone.
 
 With an InterEco website, you can present the results of your statistical analysis in an visual, interactive way. You can provide your audience (e.g., fellow ecologists, policymakers or practitioners) with personalised options to evaluate and interact with different aspects of your model and data, such as model predictions under user-specified conditions, or options to visualise the underlying data in different graphical formats. In doing so, your website can facilitate richer interpretation, improve research openness and increase the impact of your research.
 
 The InterEco Tool consists of a set of detailed guidelines to help you build your website. InterEco websites have a basic structure, consisting of five separate tabs (see here \[link\] for more info, and here \[link\] for an example webpage):
 
-1\) Landing page -
+1\) [Landing page]{.underline} - Here, you can describe the overall aim of the website, and who the intended audience is. You can also give details of and link to the published article or report that your website is associated with, and any funding details. The aim of this tab is to introduce the website and state its purpose.
 
-2\) [Study summary -]{.underline}
+2\) [Study summary]{.underline} - Here, describe important methodological details, including the study location, taxonomic scope, time period etc. You can provide interactive maps to allow the user to explore the study area and distribution of study sites. The aim of this tab is to give the reader enough information, so that they understand the research question and what was done in the study.
 
-3\) Validity - first?
+3\) [Validity]{.underline} - The validity tab contains useful figures that help confirm that the model complies with underlying assumptions concerning independence, collinearity and the absence of residual patterns. This tab serves to satisfy readers that wish to know more about the underlying data structure and model fit.
 
-[4) Interpretation]{.underline} - here you will guide your readers provide readers with xxx/ appropriate interpretation.
+[4) Interpretation]{.underline} - Here you can help your readers to interpret your study results, giving them the options to interact directly with underlying data, and choose which variables and on which measurement scale to plot predictions. The InterEco guidelines provide important hints and tips for communicating results in a useful way. For example, it gives suggestions for visualising results using different scales of measurement (whether additive or multiplicative), depending on the research question. This tab will help to avoid misinterpretation of study results and avoid common inferential errors.
 
-5\) Generality -
+5\) Generality - Here you can describe and justify the target context to which your inferences can be validly transferred (also known as the applicability domain). The aim of this tab is to encourage authors to draw conservative inferences, rather than make broad generalizations about undefined or ill-defined target contexts. Here you can clearly specify the assumptions and conditions that must hold for inferences to transfer.
 
-The InterEco Tool comprises a detailed, step-by-step guide for making your own InterEco website that follows this basic structure. \[**say it** **tells what you should think about and why..., based on statistical literature or good practice??**\]
+The InterEco Tool comprises a detailed, step-by-step guide for making your own InterEco website that follows this basic structure for improving the interpretability of interactions. It is based on good practice guidance developed across several disciplines, including ecology (ref), epidemiology (ref), public health (ref), social science (ref), politics (refs) and more.
 
-To get started with your own model, you can either follow the guide \[link\], or jump to our github page \[link\] and download a shortened versionXXXX. Our guide explains the rationale behind InterEco, and works with an example data set \[link download\]. We provide lots of hints and tips, with example code, which can be modified to suit your needs and wishes. You can also view an example InterEco webpage here \[link to worked example\].
+To get started with your own model, you can either follow the guide \[link\], or jump to our github page \[link\] and download a shortened version of the tool (without as much annotation). Our guide explains the rationale behind InterEco, and works with an example data set \[link download\]. We provide lots of hints and tips, with example code, which can be modified to suit your needs and wishes. You can also view an example InterEco webpage here \[link to worked example\].
 
 **Who should use InterEco?**
 
 InterEco is aimed at ecologists who fit statistical models to data, where the models involve nonlinear relationships. For example, models may contain terms such as statistical interactions (product terms), polynomials, transformed variables, or may comprise generalized linear models with nonlinear link functions. Your model might be relatively simple, e.g., a linear model with two predictors and their interaction, or a more complex generalised linear model with several predictors.
 
-currently supported are lm, glm/.. lme4
+Currently supported model objects are those fitted with lm, glm, lmer, and glmer.
 
 **Why InterEco?**
 
 The presentation of model results in scientific publications has remained relatively unchanged for centuries, with scientific figures typically rendered as static, 2D images with a single x and y axis. Such simplistic presentations create missed opportunities for much richer interpretation, can conceal ecological complexity and even lead to erroneous conclusions \[link to paper\].
 
-It is time to break free from the constraints of 2D figures and **XXXX** \[**add** **some inspirational text that puts onus on the researcher to be good at story telling and open sci practice and not stop at scientific article or report??**\]
+It is time to break free from the constraints of 2D figures and go interactive!It is time to go beyond publishing scientific articles and work hard to communicate our study findings to broader audiences in a effective, nuanced ways.
 
 InterEco helps researchers tell stories with their models and data. With an InterEco website, audiences can select and directly interact with underlying data and predictions generated by complex models. We foresee three major benefits of InterEco, in terms of improvements to research interpretability, generality and validity. For more details on InterEco's rationale, see page 'Why InterEco' \[link\], and check out our paper \[add link\] - see the citation below.
 
